--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         class="px-2 pl-10 py-1.5 rounded-2xl w-full outline-none  placeholder:text-white border border-white/20 bg-transparent/30 text-white">
                 </div>
                 <div class="flex gap-3">
-                    <img src="/flag.jpg" alt="" class="w-7 h-auto mt-2 ml-2 absolute"> <span
+                    <img src="flag.jpg" alt="" class="w-7 h-auto mt-2 ml-2 absolute"> <span
                         class="absolute left-16 pl-1 mt-1 text-white">+91</span><input type="text"
                         class="w-20 px-2 py-1.5 rounded-2xl outline-none  placeholder:text-white border  border-white/20 bg-transparent/30 text-white" readonly>
                     <input type="tel" name="phonenumber" id="" maxlength="10" minlength="10" placeholder="123-456-7890"
