--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
         <!-- Login Form -->
         <div id="loginForm"
-            class="login-form bg-gray-950/40  px-8 py-3 rounded-xl shadow-[0px_1px_60px_16px_#000000] shadow-black absolute scale-0 transform transition-transform duration-[700ms]">
+            class="login-form bg-gray-950/40 backdrop-blur-sm px-8 py-3 rounded-xl shadow-[0px_1px_60px_16px_#000000] shadow-black absolute scale-0 transform transition-transform duration-[700ms]">
             <i onclick="closePopUp()"
                 class="fa-solid fa-square-xmark fa-lg absolute right-5 top-6 cursor-pointer hover:scale-105"
                 style="color: #9eabc2;"></i>
@@ -89,7 +89,7 @@
 
         <!-- Sign Up form -->
         <div id="signUpForm"
-            class="singup-form bg-gray-950/40 px-8 py-3 rounded-xl shadow-[0px_1px_60px_16px_#000000] shadow-black absolute scale-0 transform transition duration-[700ms]">
+            class="singup-form bg-gray-950/40 backdrop-blur-sm px-8 py-3 rounded-xl shadow-[0px_1px_60px_16px_#000000] shadow-black absolute scale-0 transform transition duration-[700ms]">
 
             <form action="" class="flex flex-col gap-5 py-2 w-fit">
                 <i onclick="closePopUp()"
